getAllPost: paging added